Resolving issue with FKE operator